--- a/slider/style.css
+++ b/slider/style.css
@@ -1,8 +1,21 @@
+/* Reset Style */
 *{margin: 0; padding: 0; box-sizing: border-box;}
 body{width: 100%; height: 100%; position: fixed; background: #deceb8;}
 
+/* Images Style */
 .wrapper{width: 70%; height: 100%; display: flex; justify-content: center; align-items: center; margin: auto;}
 .slider-wrapper{width: 70%; height: auto; border: 1px solid #fff; position: relative;}
 .slider-contents{width: 100%; height: auto; position: relative; overflow: hidden;}
 .imgs{display: flex; position: relative; left: 0; transition: all .4s;}
 .imgs img{width: 100%;}
+
+/* Navigator Style */
+.navigator{position: absolute; left: -10%; top: 50%; transform: translateY(-50%); _background: #444; width: 120%; display: flex; justify-content: space-between;}
+.navigator a{opacity: .5; transition: all .3s; width: 50px;}
+.navigator a:hover{opacity: 1;}
+.navigator a img{width: 100%; display: block;}
+
+/* Indicator Style */
+.indicator{width: 100%; height: auto; position: absolute; display: flex;bottom: -1rem; justify-content: center; column-gap: .5rem;}
+.indicator a{width: 10px; height: 10px; border-radius: 50%; background: #fff; display: block; border: 1px solid #fff;}
+.indicator a.active{background: #777;}
