--- a/todolist/style.css
+++ b/todolist/style.css
@@ -1,16 +1,22 @@
 /* Reset Style */
 *{margin: 0; padding: 0; box-sizing: border-box;}
 body{width: 100%; height: 100%; position: fixed; left: 0; top: 0; background: yellowgreen; font-family: 'Noto Sans KR', sans-serif;}
-.wrapper{width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;}
+.wrapper{width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;}
 ol, ul{list-style: none;}
+
+/* Alert Message Style */
+.wrapper .alert{width: 50%; height: auto; padding: 1rem 0; background: #fff; margin-top: .5rem; border-radius: .25rem; text-align: center; display: none;}
+.wrapper .alert p{color: rgb(98, 141, 25);}
 
 /* Todo List Box Style */
 #todo{width: 50%; background: rgb(98, 141, 25); border-radius: .5rem; padding: 1rem 2rem;}
 #todo h2{padding: 1rem 0; text-align: center; color: #fff;}
 #todo .input-box{display: flex; justify-content: space-between; column-gap: .25rem;}
 #todo input{width: 100%; outline: 0; padding: .5rem; border: 1px solid yellowgreen; border-radius: 21.5px;}
-#todo button{padding: .5rem; border: 0; outline: 0; background: yellowgreen; border-radius: 21.5px;}
-#todo button i{color: #fff; font-weight: 400; font-size: 1.5rem;}
+#todo button{padding: .5rem; border: 0; outline: 0; background: yellowgreen; border-radius: 21.5px; transition: all .3s;}
+#todo button i{color: #fff; font-weight: 400; font-size: 1.5rem; transition: all .3s;}
+#todo button:hover{background: #fff;}
+#todo button:hover i{color: yellowgreen;}
 
 #todo .lists-box{width: 100%; height: auto; max-height: 30vh; margin-top: .5rem; overflow: auto;}
 #todo .lists-box li{width: 100%; height: auto; padding: 1rem; background: #fff; color: #666; font-size: .9rem; display: flex; justify-content: space-between; column-gap: 2rem; align-items: center; margin-top: .25rem; border-radius: 28px;}
